--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
         <div class="feature"><i class="bi bi-check-circle-fill"></i> Booking & session tracking</div>
         <div class="feature"><i class="bi bi-check-circle-fill"></i> Invoice monitoring</div>
         <div class="feature"><i class="bi bi-check-circle-fill"></i> Custom notifications</div>
+        <div class="feature"><i class="bi bi-windows"></i> Windows OS only</div>
     </div>
     
     <a href="https://ghl-sidekick.com" class="back-link">
